--- a/src/NominaSoft.UI/Views/GestionarContrato/GestionarContrato.cshtml
+++ b/src/NominaSoft.UI/Views/GestionarContrato/GestionarContrato.cshtml
@@ -226,7 +226,7 @@
                                             else
                                             {
                                                 <div class="col-sm-4">
-                                                    <button disabled type="button" class="btn btn-primary" data-toggle="modal" data-target="#crearContrato">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#crearContrato">
                                                         Crear Contrato
                                                     </button>
                                                 </div>
